Add Huawei Mediation Project, Add settings for Huawei Switch
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42583

--- a/Mediation/Code/Mediation.Web/Mediation.Web.csproj
+++ b/Mediation/Code/Mediation.Web/Mediation.Web.csproj
@@ -514,6 +514,18 @@
       <Project>{ab400620-7c45-46fe-9006-76a7a543c956}</Project>
       <Name>Mediation.Generic.Web</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mediation.Huawei.Business\Mediation.Huawei.Business.csproj">
+      <Project>{aea80c12-eeab-42e9-8838-3048e214e1d7}</Project>
+      <Name>Mediation.Huawei.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mediation.Huawei.Entities\Mediation.Huawei.Entities.csproj">
+      <Project>{c7b1f600-c09a-4ba4-99f3-a45fd8ebfda8}</Project>
+      <Name>Mediation.Huawei.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mediation.Huawei.Web\Mediation.Huawei.Web.csproj">
+      <Project>{0d919e35-b040-48bc-9d99-636ab9639261}</Project>
+      <Name>Mediation.Huawei.Web</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mediation.Teles.Business\Mediation.Teles.Business.csproj">
       <Project>{8dde7260-624a-4e06-ab69-de5fa7742a5d}</Project>
       <Name>Mediation.Teles.Business</Name>
