add SupplierTargetMatchManager class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42597

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -177,6 +177,7 @@
     <Compile Include="SellingRules\MarginRule.cs" />
     <Compile Include="SellingRules\SellingRuleSettingsConfig.cs" />
     <Compile Include="SoldCountryManager.cs" />
+    <Compile Include="SupplierTargetMatchManager.cs" />
     <Compile Include="TQI\TQIManager.cs" />
     <Compile Include="TQI\TQIMethodContext.cs" />
     <Compile Include="UtilitiesManager.cs" />
