Implementing Group condition filter and accout activation filter and refactorin invoice to allow only active and effective accounts to generate and regenerate
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42605

--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -63,7 +63,9 @@
     <Compile Include="BillingPeriod\StartDateCalculationMethod\BillingPeriodAccumulation.cs" />
     <Compile Include="BillingPeriod\WeeklyBillingPeriod.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="FilterCondition\ConditionGroupFilterCondition.cs" />
     <Compile Include="FilterCondition\FilterGroupCondition.cs" />
+    <Compile Include="FilterCondition\AccountActivationCondition.cs" />
     <Compile Include="FilterCondition\IsLockedGridFilterCondition.cs" />
     <Compile Include="FilterCondition\IsPaidFilterCondition.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceEmailActionController.cs" />
