--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -193,6 +193,7 @@
     <Content Include="VR_Invoice\Constants\InvoiceFieldEnum.js" />
     <Content Include="VR_Invoice\Constants\InvoiceMonthlyTypeEnum.js" />
     <Content Include="VR_Invoice\Constants\ItemSetNameCompareOperatorEnum.js" />
+    <Content Include="VR_Invoice\Constants\LogicalOperatorEnum.js" />
     <Content Include="VR_Invoice\Constants\ModuleConfig.js" />
     <Content Include="VR_Invoice\Directives\AccountStatus\vr-invoice-accountstatus-selector.js" />
     <Content Include="VR_Invoice\Directives\AutomaticInvoice\ProcessInput\Normal\Templates\AutomaticInvoiceProcessManualTemplate.html" />
@@ -276,7 +277,13 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-taxes.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-itemgrouping.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceExtendedSettings\vr-invoicetype-extendedsettings.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\FilterConditionItemEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\AccountActivationConditionTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\ConditionGroupTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\FilterConditionItemEditor.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\IsLockedInvoiceFilterConditionTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\vr-invoicetype-invoicefiltercondition-conditiongroup.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\vr-invoicetype-invoicefiltercondition-accountactivation.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\vr-invoicetype-invoicefiltercondition-islockedinvoice.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceItemGrouping\Templates\AggregateItemGroupingTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceItemGrouping\Templates\DimensionItemGroupingTemplate.html" />
@@ -438,6 +445,7 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\Templates\InvoiceEmailAttachmentEditor.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\InvoiceEmailAttachmentEditorController.js" />
     <Content Include="VR_Invoice\Services\PartnerInvoiceSettingService.js" />
+    <Content Include="VR_Invoice\Services\FilterConditionService.js" />
     <Content Include="VR_Invoice\Views\InvoiceSettingEditor.html" />
     <Content Include="VR_Invoice\Views\InvoiceSettingEditorController.js" />
     <Content Include="VR_Invoice\Views\InvocieSettingManagement.html" />
