update configuration with latest keys
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42624

--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -55,7 +55,7 @@
     <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
     <add key="VRNotificationTransactionDBConnStringKey"         value="TransactionDBConnString"/>
 
-    <add key="QueueItemDBConnStringKey"                         value="QueueDBConnString"/>
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
 
     <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
     <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
