--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -24,7 +24,7 @@
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Used for Business Process (Reprocess, Route build, Product Cost Generation, etc...). nbOfRuntimeInstances depended on available resources.-->
-      <runtimeServiceGroup name="group1" nbOfRuntimeInstances="20">
+      <runtimeServiceGroup name="group1" nbOfRuntimeInstances="5">
         <runtimeServices>
           <runtimeService name="Business Process Service" type="Vanrise.BusinessProcess.BusinessProcessService, Vanrise.BusinessProcess" interval="00:00:01"></runtimeService>
         </runtimeServices>
@@ -36,9 +36,15 @@
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Related to processing batches from queues and saving them to database such as Main - Invalid - Failed tables. nbOfRuntimeInstances depended on available resources.-->
-      <runtimeServiceGroup name="group4" nbOfRuntimeInstances="20">
+      <runtimeServiceGroup name="group4" nbOfRuntimeInstances="2">
         <runtimeServices>
           <runtimeService name="Queue Activation Service" type="Vanrise.Queueing.QueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
+      <!-- Related to saving batches as queues in database at end stages such as Billingstats and traffic stats. nbOfRuntimeInstances depended on available resources.-->
+      <runtimeServiceGroup name="group5" nbOfRuntimeInstances="1">
+        <runtimeServices>
+          <runtimeService name="Summary Queue Activation Service" type="Vanrise.Queueing.SummaryQueueActivationRuntimeService, Vanrise.Queueing" interval="00:00:00.100"></runtimeService>
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Related to Data sources such CDR Import process. nbOfRuntimeInstances should be equal to "Number Of Parallel Readers" configured in Data source management page.-->
@@ -47,46 +53,24 @@
           <runtimeService name="Data Source Runtime Service" type="Vanrise.Integration.Business.DataSourceRuntimeService, Vanrise.Integration.Business" interval="00:00:02"></runtimeService>
         </runtimeServices>
       </runtimeServiceGroup>
+      <!-- Used to cache Data Result in Memory in order to handle Paging and sorting on the UI grids. nbOfRuntimeInstances depended on available resources.-->
+      <runtimeServiceGroup name="group7" nbOfRuntimeInstances="1">
+        <runtimeServices>
+          <runtimeService name="Big Data Runtime Service" type="Vanrise.Common.Business.BigDataRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
+      <runtimeServiceGroup name="group8" nbOfRuntimeInstances="1">
+        <runtimeServices>
+          <runtimeService name="Data Grouping Distributor Runtime Service" type="Vanrise.Common.Business.DataGroupingDistributorRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
+      <runtimeServiceGroup name="group9" nbOfRuntimeInstances="1">
+        <runtimeServices>
+          <runtimeService name="Data Grouping Executor Runtime Service" type="Vanrise.Common.Business.DataGroupingExecutorRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
     </runtimeServiceGroups>
   </vanriseRuntime>
-
-  <connectionStrings configSource="ConnectionStrings.config">
-    <!--<add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
-    <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
-    <add name="QueueDBConnString"          connectionString="Initial Catalog=FZeroQueue;Data Source=.;User ID=sa;Password=p@ssw0rd"/>
-    <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=development;Password=dev!123;"/>
-    <add name="DWSDBConnString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDW;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
-    <add name="FraudAnalysis_CDRConnStringTemplateKey" connectionString="Initial Catalog=CDRAnalysisDev_CDR_{0};Data Source=192.168.110.185;User ID=development;Password=dev!123;"/>-->
-  </connectionStrings>
-
-  <appSettings file="appSettings.config">
-    <add key="OperatorType" value="1" />    <!--  1 =Mobile ,  2 = PSTN -->
-    <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString"/>
-
-    <add key="DWFactBatchSize" value="100000" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueItemDBConnStringKey" value="QueueDBConnString"/>
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
-    <add key="AddBusinessProcessConsoleTracking" value="true"/>
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
-    <add key="BCPDonotDeleteFiles" value="false"/>    <!--this should be always false at production. could be only set to true for troubleshooting-->
-    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
-    <add key="VanriseCache_CleanMemoryThreshold" value="999999999999999"/>    
-    <add key="FraudAnalysis_CDRNormalPrefixLength" value="0"/>
-    <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-
-    <add key="IsRuntimeService" value="true"/>
-
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-  </appSettings>
 
   <vanriseLogging maxLogLevel="Information">
     <loggers>
@@ -103,5 +87,59 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
+  
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
+    <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
+    <add name="QueueDBConnString"          connectionString="Initial Catalog=FZeroQueue;Data Source=.;User ID=sa;Password=p@ssw0rd"/>
+    <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
+    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=development;Password=dev!123;"/>
+    <add name="DWSDBConnString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDW;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
+    <add name="FraudAnalysis_CDRConnStringTemplateKey" connectionString="Initial Catalog=CDRAnalysisDev_CDR_{0};Data Source=192.168.110.185;User ID=development;Password=dev!123;"/>-->
+  </connectionStrings>
 
+  <appSettings file="appSettings.config">
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
+    <add key="IsRuntimeService" value="true"/>
+    <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="SummaryTransformationDBConnStringKey"             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+    <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
+    <add key="DataGroupingDBConnStringKey"                      value="TransactionDBConnString"/>
+    <add key="VRNotificationTransactionDBConnStringKey"         value="TransactionDBConnString"/>
+
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
+
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="AddBusinessProcessConsoleTracking" value="true"/>
+    <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
+        
+    <add key="BCPDonotDeleteFiles" value="false"/><!--BCPDonotDeleteFiles should be always false at production. could be only set to true for troubleshooting-->
+    <add key="VanriseCache_CleanMemoryThreshold" value="999999999999999"/>
+    <add key="BCPCommandName" value="bcp"/>
+    <add key="Queue_NbOfMaxConcurrentActivators_Default" value="10"/>
+    <add key="Queue_NbOfMaxConcurrentActivators_UpdateSummaryQueueActivator" value="30" />
+    <add key="Queue_ConsecutiveItemsToProcess" value="5"/>
+    
+    <add key="OperatorType" value="1" /><!--  1 =Mobile ,  2 = PSTN -->
+    <add key="DWFactBatchSize" value="100000" />
+    <add key="FraudAnalysis_CDRNormalPrefixLength" value="0"/>
+    
+    <add key="ExposedConnectionStringNames" value=""/>
+  </appSettings>
 </configuration>
