Implementation Routing Actions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42629

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/TOne.WhS.Routing.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/TOne.WhS.Routing.Web.csproj
@@ -175,6 +175,22 @@
     <Content Include="WhS_Routing\Directives\CustomerRoute\vr-whs-routing-customerroute-details.js" />
     <Content Include="WhS_Routing\Directives\CustomerRoute\vr-whs-routing-customerroute-grid.js" />
     <Content Include="WhS_Routing\Directives\CustomerRoute\vr-whs-routing-customerroute-settings.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockCustomeAccount\Templates\BlockCustomerAccountAction.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockCustomeAccount\Templates\BlockCustomerAccountActionDefinition.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockCustomeAccount\whs-routing-actiondefinition-blockcustomeraccount.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockCustomeAccount\whs-routing-action-blockcustomeraccount.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSaleZone\Templates\BlockSaleZoneAction.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSaleZone\Templates\BlockSaleZoneActionDefinition.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSaleZone\whs-routing-action-blocksalezone.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSaleZone\whs-routing-actiondefinition-blocksalezone.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierAccount\Templates\BlockSupplierAccountAction.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierAccount\Templates\BlockSupplierAccountActionDefinition.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierAccount\whs-routing-action-blocksupplieraccount.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierAccount\whs-routing-actiondefinition-blocksupplieraccount.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierZone\Templates\BlockSupplierZoneAction.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierZone\Templates\BlockSupplierZoneActionDefinition.html" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierZone\whs-routing-action-blocksupplierzone.js" />
+    <Content Include="WhS_Routing\Directives\Extensions\Actions\BlockSupplierZone\whs-routing-actiondefinition-blocksupplierzone.js" />
     <Content Include="WhS_Routing\Directives\Extensions\RouteOptionRuleSettings\Templates\RouteOptionRulesSettingsBlockTemplate.html" />
     <Content Include="WhS_Routing\Directives\Extensions\RouteOptionRuleSettings\Templates\RouteOptionRulesSettingsMarketPriceTemplate.html" />
     <Content Include="WhS_Routing\Directives\Extensions\RouteOptionRuleSettings\vr-whs-routing-routeoptionrulesettings-block.js" />
