--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -701,6 +701,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\RabihTask.cs" />
     <Compile Include="Tasks\MortadaTask.cs" />
+    <Compile Include="Tasks\RodiTask.cs" />
     <Compile Include="Tasks\WalidTask.cs" />
     <Compile Include="Tasks\MustaphaTask.cs" />
     <Compile Include="Tasks\RayanTask.cs" />
