--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Product\Definition\ProductDefinitionInfo.cs" />
     <Compile Include="GenericFieldDefinition\GenericFieldDefinitionInfo.cs" />
     <Compile Include="IAccountBEDefinitionManager.cs" />
+    <Compile Include="RecurringCharge\AccountPackageRecurCharge.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorConfig.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorDefinitionSettings.cs" />
     <Compile Include="RecurringCharge\Evaluator\RecurringChargeEvaluatorOutput.cs" />
