--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ProductFamily\ProductFamilyQuery.cs" />
     <Compile Include="ProductFamily\ProductFamilySettings.cs" />
     <Compile Include="Product\Definition\ProductDefinitionFilter.cs" />
+    <Compile Include="Product\IPostpaidProductSettings.cs" />
     <Compile Include="Product\IProductFilter.cs" />
     <Compile Include="Product\Product.cs" />
     <Compile Include="Product\ProductDetail.cs" />
