--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -138,6 +138,7 @@
     <Compile Include="AccountBalanceAlertRule\PercentageBalanceAlertThreshold.cs" />
     <Compile Include="AccountBalanceFieldSource\FinancialAccountFieldSourceSetting.cs" />
     <Compile Include="AccountChargeEvaluators\FixedChargeAccountRecurringChargeEvaluator.cs" />
+    <Compile Include="AccountCitySerialNumberPart.cs" />
     <Compile Include="AccountConditions\ConditionGroupAccountCondition.cs" />
     <Compile Include="AccountConditions\FinancialAccountCondition.cs" />
     <Compile Include="AccountConditions\SubAccountCondition.cs" />
