--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -402,6 +402,8 @@
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DID\retail-be-didnumbertype-number.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DID\Templates\DIDRange.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\DID\Templates\DIDNumber.html" />
+    <Content Include="Retail_BusinessEntity\Directives\MainExtensions\InvoiceSerialNumberSettings\retail-invoicetype-serialnumber-accountcity.js" />
+    <Content Include="Retail_BusinessEntity\Directives\MainExtensions\InvoiceSerialNumberSettings\Templates\AccountCitySerialNumberPartTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\retail-be-retrievefinancialinfostep-preview.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\retail-be-retrievefinancialinfostep.js" />
     <Content Include="Retail_BusinessEntity\Directives\MainExtensions\TransformationSteps\Templates\RetrieveFinancialInfoStepPreviewTemplate.html" />
