Adding BEParentChildrenRelation Entity and InsertMultiple @BEParentChildRelationManager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42650

--- a/Vanrise/Code/Vanrise.GenericData.Entities/Vanrise.GenericData.Entities.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Entities/Vanrise.GenericData.Entities.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BEParentChildRelation\BEParentChildRelationDefinition\BEParentChildRelationDefinitionSettings.cs" />
     <Compile Include="BEParentChildRelation\BEParentChildRelationDetail.cs" />
     <Compile Include="BEParentChildRelation\BEParentChildRelationQuery.cs" />
+    <Compile Include="BEParentChildRelation\BEParentChildrenRelation.cs" />
     <Compile Include="BusinessEntities\BELookupRuleDefinition\BELookupRuleDefinitionDetail.cs" />
     <Compile Include="BusinessEntities\BELookupRuleDefinition\BELookupRuleDefinitionFilter.cs" />
     <Compile Include="BusinessEntities\BELookupRuleDefinition\BELookupRuleDefinitionInfo.cs" />
