Adding RemoveActionSettings @Vanrise.Rules.Normalization.MainExtensions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42655

--- a/Vanrise/Code/Vanrise.Rules.Normalization/Vanrise.Rules.Normalization.csproj
+++ b/Vanrise/Code/Vanrise.Rules.Normalization/Vanrise.Rules.Normalization.csproj
@@ -46,6 +46,7 @@
     <Compile Include="INormalizeNumberActionContext.cs" />
     <Compile Include="INormalizeRuleContext.cs" />
     <Compile Include="MainExtensions\AddPrefixActionSettings.cs" />
+    <Compile Include="MainExtensions\RemoveActionSettings.cs" />
     <Compile Include="MainExtensions\ReplaceStringActionSettings.cs" />
     <Compile Include="MainExtensions\SubstringActionSettings.cs" />
     <Compile Include="NormalizationRuleManager.cs" />
