--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -183,7 +183,9 @@
     <Content Include="WhS_Sales\Directives\BulkAction\vr-whs-sales-bulkaction-type-selective.js" />
     <Content Include="WhS_Sales\Directives\CodeCompare\Templates\CodeCompareGrid.html" />
     <Content Include="WhS_Sales\Directives\CodeCompare\vr-whs-sales-codecompare-grid.js" />
+    <Content Include="WhS_Sales\Directives\Country\Templates\CountryWithDefaultRatesGridTemplate.html" />
     <Content Include="WhS_Sales\Directives\Country\Templates\SoldCountryGridTemplate.html" />
+    <Content Include="WhS_Sales\Directives\Country\vr-whs-sales-countrywithdefaultrate-grid.js" />
     <Content Include="WhS_Sales\Directives\Country\vr-whs-sales-soldcountry-grid.js" />
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ActionTypes\Templates\RateBulkActionTypeTemplate.html" />
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ActionTypes\vr-whs-sales-bulkaction-type-bed.js" />
