Implementing automatic invoice actions and adding new modifications
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42704

--- a/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Entities/Vanrise.Invoice.Entities.csproj
@@ -96,6 +96,7 @@
     <Compile Include="InvoiceType\InvoiceFieldInfo.cs" />
     <Compile Include="InvoiceType\InvoiceFileConverter.cs" />
     <Compile Include="InvoiceType\EffectivePartnerInvoiceSetting.cs" />
+    <Compile Include="InvoiceType\InvoiceSettingParts\AutomaticInvoiceActionsPart.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\AutomaticInvoiceSettingPart.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\AutomaticInvoiceSettingPartRuntime.cs" />
     <Compile Include="InvoiceType\InvoiceSettingParts\BillingPeriodInvoiceSettingPart.cs" />
