Implementing change status action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42713

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -137,6 +137,8 @@
   <ItemGroup>
     <Compile Include="AccountBalanceAlertRule\PercentageBalanceAlertThreshold.cs" />
     <Compile Include="AccountBalanceFieldSource\FinancialAccountFieldSourceSetting.cs" />
+    <Compile Include="AccountBEActionTypes\ChangeStatusActionController.cs" />
+    <Compile Include="AccountBEActionTypes\ChangeStatusActionManager.cs" />
     <Compile Include="AccountBEActionTypes\ChangeStatusActionSettings.cs" />
     <Compile Include="AccountChargeEvaluators\FixedChargeAccountRecurringChargeEvaluator.cs" />
     <Compile Include="AccountCitySerialNumberPart.cs" />
